--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "grapher",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://nikhedonia.github.io/grapher",
   "dependencies": {
+    "@monaco-editor/react": "^4.4.4",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -10,9 +12,15 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "math.js": "^1.1.46",
+    "mathjs": "^10.5.0",
+    "monaco-editor": "^0.33.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-monaco-editor": "^0.48.0",
     "react-scripts": "5.0.1",
+    "react-three-fiber": "^6.0.13",
+    "three": "^0.139.2",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
@@ -39,5 +47,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/three": "^0.139.0",
+    "gh-pages": "^3.2.3"
   }
 }
